# rs_hpp_bridge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
docs/ai/: 01_technical_analysis.md  02_task_management_guide.md  03_project_improvement_plan.md  04_revised_task_plan.md  README.md  dependency_graph.md  task_ids_reference.md
src/: gen_c.rs  gen_context.rs  gen_dart.rs  main.rs  parser.rs
tests/: quality_check_test.rs  test_lib.rs
tests/1/: test.hpp
tests/1/ut_result/: parse_hpp.txt
tests/flutter_test_project/: .metadata  README.md  ffigen.yaml  pubspec.yaml  run_test.sh
tests/flutter_test_project/example/: README.md  pubspec.yaml
tests/flutter_test_project/example/lib/: main.dart
tests/flutter_test_project/example/macos/Runner.xcodeproj/: project.pbxproj
tests/flutter_test_project/example/macos/Runner/Configs/: AppInfo.xcconfig
tests/flutter_test_project/example/test/: main_test.dart
tests/flutter_test_project/lib/: TestModule_public.dart  flutter_test_project.dart  flutter_test_project_bindings_generated.dart  test.dart  test_ffiapi.dart
tests/flutter_test_project/macos/: flutter_test_project.podspec
tests/flutter_test_project/macos/Classes/: flutter_test_project.c  flutter_test_project.cpp
tests/flutter_test_project/src/: CMakeLists.txt  TestModule.i  base_types.hpp  company.cpp  company.hpp  flutter_test_project.c  person.cpp  person.hpp  simple_a.cpp  simple_a.hpp  simple_b.cpp  simple_b.hpp  simple_types.hpp  test.cpp  test.hpp  test_ffi.cpp  test_ffi.h
tests/parser_test/: test.i
tests/parser_test/ut_result/: parse_hpp.txt
(+1 files in other folders)
